[gd_scene load_steps=11 format=3 uid="uid://bp1h4q7voqhfk"]

[ext_resource type="Script" uid="uid://plt40tcd7666" path="res://main.gd" id="1_tubg1"]
[ext_resource type="Texture2D" uid="uid://2dq331pb355l" path="res://art/cursor_red.png" id="2_7mycd"]
[ext_resource type="Texture2D" uid="uid://e10sfls8cob7" path="res://art/cursor_blue.png" id="3_272bh"]
[ext_resource type="PackedScene" uid="uid://cgtbu5l52m5gk" path="res://screens/pause/pause_menu.tscn" id="3_qne8x"]
[ext_resource type="PackedScene" uid="uid://piuow3foau7w" path="res://screens/title/title_screen.tscn" id="4_4nmqe"]
[ext_resource type="PackedScene" uid="uid://dqbrmx3p3v5wa" path="res://shaders/mix_sub_viewport_container.tscn" id="4_272bh"]
[ext_resource type="Texture2D" uid="uid://ctir38l7dpemo" path="res://art/bkg_blue_w_masks.png" id="5_4c57u"]
[ext_resource type="Texture2D" uid="uid://d4cjsnm2sxetb" path="res://art/bkg_red_w_masks.png" id="6_efxa6"]
[ext_resource type="PackedScene" uid="uid://csgok2hbpj1kn" path="res://screens/win/win_screen.tscn" id="9_kek77"]
[ext_resource type="AudioStream" uid="uid://crkcm6x8ih5ef" path="res://audio/pop-tap-click-fx-383733.mp3" id="10_4c57u"]

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_tubg1")
filter_cursor_textures = Dictionary[int, Texture2D]({
0: null,
1: ExtResource("2_7mycd"),
2: ExtResource("3_272bh")
})

[node name="World" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 1
visible = false

[node name="ColorRect" type="ColorRect" parent="World"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.9411765, 1, 1)

[node name="SubViewportContainer2" parent="World" instance=ExtResource("4_272bh")]
unique_name_in_owner = true
below_texture = ExtResource("5_4c57u")
above_texture = ExtResource("6_efxa6")

[node name="PauseMenu" parent="." instance=ExtResource("3_qne8x")]
unique_name_in_owner = true
visible = false

[node name="TitleScreen" parent="." instance=ExtResource("4_4nmqe")]
unique_name_in_owner = true
visible = false

[node name="MouseLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="SoftwareMouse" type="Sprite2D" parent="MouseLayer"]
unique_name_in_owner = true
centered = false

[node name="WinScreen" parent="." instance=ExtResource("9_kek77")]
unique_name_in_owner = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"Music"

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_4c57u")
max_polyphony = 5
bus = &"Sounds"

[connection signal="mask_location_clicked" from="World/SubViewportContainer2" to="." method="_on_mask_location_clicked"]
[connection signal="boop_required" from="PauseMenu" to="." method="_on_pause_menu_boop_required"]
[connection signal="toggled_resolution_dropdown" from="PauseMenu" to="." method="_on_pause_menu_toggled_resolution_dropdown"]
[connection signal="went_to_title" from="PauseMenu" to="." method="_on_pause_menu_went_to_title"]
[connection signal="dismissed" from="TitleScreen" to="." method="_on_title_screen_dismissed"]
[connection signal="dismissed" from="WinScreen" to="." method="_on_win_screen_dismissed"]
